# gse-slack

./: .gitignore  Cargo.toml  config-sample.yaml
docker/app/: Dockerfile
docker/app-dev/: Dockerfile
src/: controllers.rs  lib.rs  main.rs
src/controllers/: show_dialog.rs
src/domains/: models.rs  services.rs
src/domains/models/: data_set.rs  dialog_request.rs
src/domains/services/: config.rs  gse.rs  slack.rs
