[package]
name = "gse-slack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
envy = "0.4.2"
serde = { version = "^1.0.101", features = ["derive"] }
serde_json = "1.0"
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.8"
getopts = "0.2"
